--- a/public/login.html
+++ b/public/login.html
@@ -37,7 +37,7 @@
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
         <br />
-        <p>Or sign up <a href="/">here</a></p>
+        <p>Or sign up <a href="/signup">here</a></p>
       </div>
     </div>
   </div>
