--- a/public/signup.html
+++ b/public/signup.html
@@ -39,7 +39,7 @@
         </form>
         <br />
         <p>Or log in
-          <a href="/login">here</a>
+          <a href="/">here</a>
         </p>
       </div>
     </div>
