Button and style changes

--- a/public/login.html
+++ b/public/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" type="image/png" href="./assets/images/chatapp2.png">
   <title>Chat Login</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +14,7 @@
   <nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
       <div class="navbar-header text-light h1 mx-auto">
-        Chat App
+        Chat Room App
       </div>
     </div>
   </nav>
