--- a/public/signup.html
+++ b/public/signup.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <link rel="icon" type="image/png" href="./assets/images/chatapp2.png">
+  <title>Chat Room Sign up</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -13,7 +14,7 @@
   <nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
       <div class="navbar-header text-light h1 mx-auto">
-        Chat App
+        Chat Room App
       </div>
     </div>
   </nav>
